tools/data-handler/test/test-data/invalid/invalid-link-type-broken-card-type-ref/.cards/local/calculations/test/calculation.lp
% Test calculation
% This is a simple test calculation for unit tests
test_fact(1).
test_fact(2).
